<resources>
    <string name="app_name">Stepsy</string>
    <string name="statics">statics</string>
    <string name="home">home</string>
    <string name="settings">settings</string>
    <string name="step_counter_no_sensor">TEST TOAST</string>
    <string name="progress_and_goal">%s/%s</string>

    <!-- Preference Titles -->
    <string name="personal_goal">Personal Goal</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="language">Language</string>

    <!-- Notifications -->
    <string name="notification_service">Service</string>
    <string name="notification_service_description">Information about service</string>
    <string name="notification_title">Stepsy - Up and Away</string>
    <string name="notification_message">Great job so far! Keep moving and become a better version of yourself</string>

    <!-- Sync Preferences -->
    <string name="dark_mode">Dark Mode</string>
    <string name="notifications">Notifications</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Days -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="Default_Zero">0</string>
</resources>