<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="settings">

        <EditTextPreference
            app:key="signature"
            app:title="@string/personal_goal"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/dark_mode" />

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/notifications" />

    </PreferenceCategory>

</PreferenceScreen>